--- a/config/database.yml
+++ b/config/database.yml
@@ -16,13 +16,19 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  database: letsdine_test
   pool: 5
   timeout: 5000
+  username: prashant
+  password: password@123
+  host:     localhost
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: letsdine_production
   pool: 5
   timeout: 5000
+  username: prashant
+  password: password@123
+  host:     localhost
