--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -44,6 +44,8 @@ application/index.js: application-6233c1d7441e742c9d4c50777bc904b6.js
 index.html: index-dc4e7e08d4bfba4dbf19714fe6628101.html
 application.css: application-3082b6f038369c2dc405d03a6eae52e8.css
 application/index.css: application-3082b6f038369c2dc405d03a6eae52e8.css
+bootstrap-responsive.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
+bootstrap-responsive/index.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
 bootstrap.css: bootstrap-3e80a32b2f6530d28312508f7ffd396c.css
 bootstrap/index.css: bootstrap-3e80a32b2f6530d28312508f7ffd396c.css
 jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
