--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -48,5 +48,11 @@ bootstrap-responsive.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.
 bootstrap-responsive/index.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
 bootstrap.css: bootstrap-3e80a32b2f6530d28312508f7ffd396c.css
 bootstrap/index.css: bootstrap-3e80a32b2f6530d28312508f7ffd396c.css
+custom.css: custom-bd7b102b73bc95fdabfbfb006141a033.css
+custom/index.css: custom-bd7b102b73bc95fdabfbfb006141a033.css
+datepicker.css: datepicker-f030298a599c581d22476f8572d7386d.css
+datepicker/index.css: datepicker-f030298a599c581d22476f8572d7386d.css
+style.css: style-7c0a8ef6e80aad8cffbb1366cb63bd29.css
+style/index.css: style-7c0a8ef6e80aad8cffbb1366cb63bd29.css
 jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
 jquery/index.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
