--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -52,6 +52,8 @@ custom.css: custom-bd7b102b73bc95fdabfbfb006141a033.css
 custom/index.css: custom-bd7b102b73bc95fdabfbfb006141a033.css
 datepicker.css: datepicker-f030298a599c581d22476f8572d7386d.css
 datepicker/index.css: datepicker-f030298a599c581d22476f8572d7386d.css
+prettify.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
+prettify/index.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
 style.css: style-7c0a8ef6e80aad8cffbb1366cb63bd29.css
 style/index.css: style-7c0a8ef6e80aad8cffbb1366cb63bd29.css
 jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
