--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -46,6 +46,8 @@ application.css: application-3082b6f038369c2dc405d03a6eae52e8.css
 application/index.css: application-3082b6f038369c2dc405d03a6eae52e8.css
 bootstrap-responsive.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
 bootstrap-responsive/index.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
+bootstrap-timepicker.css: bootstrap-timepicker-507a15d551ef65cab721d901af6a8a7f.css
+bootstrap-timepicker/index.css: bootstrap-timepicker-507a15d551ef65cab721d901af6a8a7f.css
 bootstrap.css: bootstrap-3e80a32b2f6530d28312508f7ffd396c.css
 bootstrap/index.css: bootstrap-3e80a32b2f6530d28312508f7ffd396c.css
 custom.css: custom-bd7b102b73bc95fdabfbfb006141a033.css
