--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -41,7 +41,19 @@ topBarBG.png: topBarBG-78e160f5aac3985110e62277150ecf74.png
 topBarBG/index.png: topBarBG-78e160f5aac3985110e62277150ecf74.png
 application.js: application-6233c1d7441e742c9d4c50777bc904b6.js
 application/index.js: application-6233c1d7441e742c9d4c50777bc904b6.js
+bootstrap-datepicker.js: bootstrap-datepicker-74c36d29cb50e87871b6ae6db53cb833.js
+bootstrap-datepicker/index.js: bootstrap-datepicker-74c36d29cb50e87871b6ae6db53cb833.js
+bootstrap-timepicker.js: bootstrap-timepicker-0a8e7ed55fe8e0f216163c3b052455e4.js
+bootstrap-timepicker/index.js: bootstrap-timepicker-0a8e7ed55fe8e0f216163c3b052455e4.js
+bootstrap.js: bootstrap-455e3d4a9b7be1354e35a72ce01a6642.js
+bootstrap/index.js: bootstrap-455e3d4a9b7be1354e35a72ce01a6642.js
 index.html: index-dc4e7e08d4bfba4dbf19714fe6628101.html
+jquery-1.9.1.js: jquery-1.9.1-08bbde0e2625ba65b3f4d03e5cf1c05d.js
+jquery-1/index.9.1.js: jquery-1.9.1-08bbde0e2625ba65b3f4d03e5cf1c05d.js
+jquery.bootstrap.wizard.js: jquery.bootstrap.wizard-d782aee0ec46f0cb09d3db478d9974cf.js
+jquery/index.bootstrap.wizard.js: jquery.bootstrap.wizard-d782aee0ec46f0cb09d3db478d9974cf.js
+jquery.slidingGallery-1.2.js: jquery.slidingGallery-1.2-ecc0a4509d67d13f12e02a3fe15aea48.js
+jquery/index.slidingGallery-1.2.js: jquery.slidingGallery-1.2-ecc0a4509d67d13f12e02a3fe15aea48.js
 application.css: application-3082b6f038369c2dc405d03a6eae52e8.css
 application/index.css: application-3082b6f038369c2dc405d03a6eae52e8.css
 bootstrap-responsive.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
