Modified the time format and added the restaurant name and location

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -39,8 +39,8 @@ timeIcon.png: timeIcon-030cbb9a35b95c008949e1e1af48b31f.png
 timeIcon/index.png: timeIcon-030cbb9a35b95c008949e1e1af48b31f.png
 topBarBG.png: topBarBG-78e160f5aac3985110e62277150ecf74.png
 topBarBG/index.png: topBarBG-78e160f5aac3985110e62277150ecf74.png
-application.js: application-6233c1d7441e742c9d4c50777bc904b6.js
-application/index.js: application-6233c1d7441e742c9d4c50777bc904b6.js
+application.js: application-953631c05d1ccd4aa1bc896de2468c9e.js
+application/index.js: application-953631c05d1ccd4aa1bc896de2468c9e.js
 bootstrap-datepicker.js: bootstrap-datepicker-74c36d29cb50e87871b6ae6db53cb833.js
 bootstrap-datepicker/index.js: bootstrap-datepicker-74c36d29cb50e87871b6ae6db53cb833.js
 bootstrap-timepicker.js: bootstrap-timepicker-0a8e7ed55fe8e0f216163c3b052455e4.js
@@ -52,10 +52,14 @@ jquery-1.9.1.js: jquery-1.9.1-08bbde0e2625ba65b3f4d03e5cf1c05d.js
 jquery-1/index.9.1.js: jquery-1.9.1-08bbde0e2625ba65b3f4d03e5cf1c05d.js
 jquery.bootstrap.wizard.js: jquery.bootstrap.wizard-d782aee0ec46f0cb09d3db478d9974cf.js
 jquery/index.bootstrap.wizard.js: jquery.bootstrap.wizard-d782aee0ec46f0cb09d3db478d9974cf.js
+jquery.gallery.js: jquery.gallery-8f202acb5844b47bf689214a3512fa80.js
+jquery/index.gallery.js: jquery.gallery-8f202acb5844b47bf689214a3512fa80.js
 jquery.slidingGallery-1.2.js: jquery.slidingGallery-1.2-ecc0a4509d67d13f12e02a3fe15aea48.js
 jquery/index.slidingGallery-1.2.js: jquery.slidingGallery-1.2-ecc0a4509d67d13f12e02a3fe15aea48.js
-application.css: application-6f932e63ac5b903f5926f95e920701c6.css
-application/index.css: application-6f932e63ac5b903f5926f95e920701c6.css
+modernizr.custom.53451.js: modernizr.custom.53451-5c4eeccf659da2baacac538b70b48cd2.js
+modernizr/index.custom.53451.js: modernizr.custom.53451-5c4eeccf659da2baacac538b70b48cd2.js
+application.css: application-bb272fe4b8aae1a1b7ce35ac49edabb2.css
+application/index.css: application-bb272fe4b8aae1a1b7ce35ac49edabb2.css
 bootstrap-responsive.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
 bootstrap-responsive/index.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
 bootstrap-timepicker.css: bootstrap-timepicker-507a15d551ef65cab721d901af6a8a7f.css
@@ -68,7 +72,7 @@ datepicker.css: datepicker-f030298a599c581d22476f8572d7386d.css
 datepicker/index.css: datepicker-f030298a599c581d22476f8572d7386d.css
 prettify.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
 prettify/index.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
-style.css: style-39c1906ae4de26990d9ec4f11c9156dc.css
-style/index.css: style-39c1906ae4de26990d9ec4f11c9156dc.css
+style.css: style-2d102c7b3b8a14daceaeb37939a354ab.css
+style/index.css: style-2d102c7b3b8a14daceaeb37939a354ab.css
 jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
 jquery/index.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
