--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -27,6 +27,18 @@ hugh-jackman-thumbnail.jpg: hugh-jackman-thumbnail-fd6cc7440950106b9a6c1013cc8b0
 hugh-jackman-thumbnail/index.jpg: hugh-jackman-thumbnail-fd6cc7440950106b9a6c1013cc8b0c83.jpg
 hugh-jackman.jpg: hugh-jackman-8594a9f4522d5497c266f0eac4390a36.jpg
 hugh-jackman/index.jpg: hugh-jackman-8594a9f4522d5497c266f0eac4390a36.jpg
+img/1.jpg: img/1-b1e273e6a24a445d7293cf79aac3451e.jpg
+img/1/index.jpg: img/1-b1e273e6a24a445d7293cf79aac3451e.jpg
+img/2.jpg: img/2-80672192a08b2b303d18cc18d740647a.jpg
+img/2/index.jpg: img/2-80672192a08b2b303d18cc18d740647a.jpg
+img/3.jpg: img/3-81b8a81747a731861cfa013b40685003.jpg
+img/3/index.jpg: img/3-81b8a81747a731861cfa013b40685003.jpg
+img/arrow-left-black.png: img/arrow-left-black-563a8bd3f9ea86177482c089ad389660.png
+img/arrow-left-black/index.png: img/arrow-left-black-563a8bd3f9ea86177482c089ad389660.png
+img/arrow-right-black.png: img/arrow-right-black-8cf46a4aa9662bf041b90ce4bc080775.png
+img/arrow-right-black/index.png: img/arrow-right-black-8cf46a4aa9662bf041b90ce4bc080775.png
+img/preloader.gif: img/preloader-494b2f4661d8df7809cf7a491abc5a5e.gif
+img/preloader/index.gif: img/preloader-494b2f4661d8df7809cf7a491abc5a5e.gif
 locationIcon.png: locationIcon-4fbf527f6b20b0ee83a793f4607a8309.png
 locationIcon/index.png: locationIcon-4fbf527f6b20b0ee83a793f4607a8309.png
 logo.png: logo-06d1d41faae3f23eb0c7180506fee7fb.png
@@ -39,8 +51,8 @@ timeIcon.png: timeIcon-030cbb9a35b95c008949e1e1af48b31f.png
 timeIcon/index.png: timeIcon-030cbb9a35b95c008949e1e1af48b31f.png
 topBarBG.png: topBarBG-78e160f5aac3985110e62277150ecf74.png
 topBarBG/index.png: topBarBG-78e160f5aac3985110e62277150ecf74.png
-application.js: application-24b65db1e5c9d62bb9af44517fc7ab2e.js
-application/index.js: application-24b65db1e5c9d62bb9af44517fc7ab2e.js
+application.js: application-dff58a63dba0ce33bb2aef8c4de67648.js
+application/index.js: application-dff58a63dba0ce33bb2aef8c4de67648.js
 bootstrap-datepicker.js: bootstrap-datepicker-74c36d29cb50e87871b6ae6db53cb833.js
 bootstrap-datepicker/index.js: bootstrap-datepicker-74c36d29cb50e87871b6ae6db53cb833.js
 bootstrap-timepicker.js: bootstrap-timepicker-0a8e7ed55fe8e0f216163c3b052455e4.js
@@ -56,8 +68,12 @@ jquery.gallery.js: jquery.gallery-8f202acb5844b47bf689214a3512fa80.js
 jquery/index.gallery.js: jquery.gallery-8f202acb5844b47bf689214a3512fa80.js
 modernizr.custom.53451.js: modernizr.custom.53451-5c4eeccf659da2baacac538b70b48cd2.js
 modernizr/index.custom.53451.js: modernizr.custom.53451-5c4eeccf659da2baacac538b70b48cd2.js
-application.css: application-bb272fe4b8aae1a1b7ce35ac49edabb2.css
-application/index.css: application-bb272fe4b8aae1a1b7ce35ac49edabb2.css
+zoomflow/zoomflow.dev.js: zoomflow/zoomflow.dev-66cf49dbcd7b4fb374ebe9a2a2a39fea.js
+zoomflow/zoomflow/index.dev.js: zoomflow/zoomflow.dev-66cf49dbcd7b4fb374ebe9a2a2a39fea.js
+zoomflow/zoomflow.css: zoomflow/zoomflow-c019b8b2485d4925dc8529f4b2ce6ff1.css
+zoomflow/zoomflow/index.css: zoomflow/zoomflow-c019b8b2485d4925dc8529f4b2ce6ff1.css
+application.css: application-3017063080d536c1a42d773b7de2e287.css
+application/index.css: application-3017063080d536c1a42d773b7de2e287.css
 bootstrap-responsive.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
 bootstrap-responsive/index.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
 bootstrap-timepicker.css: bootstrap-timepicker-507a15d551ef65cab721d901af6a8a7f.css
@@ -70,7 +86,7 @@ datepicker.css: datepicker-f030298a599c581d22476f8572d7386d.css
 datepicker/index.css: datepicker-f030298a599c581d22476f8572d7386d.css
 prettify.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
 prettify/index.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
-style.css: style-2d102c7b3b8a14daceaeb37939a354ab.css
-style/index.css: style-2d102c7b3b8a14daceaeb37939a354ab.css
+style.css: style-16f616943dc4bdb67b4c24796ea12ef6.css
+style/index.css: style-16f616943dc4bdb67b4c24796ea12ef6.css
 jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
 jquery/index.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
