Added zoomflow.css to the precompile list

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -66,12 +66,8 @@ jquery.bootstrap.wizard.js: jquery.bootstrap.wizard-d782aee0ec46f0cb09d3db478d99
 jquery/index.bootstrap.wizard.js: jquery.bootstrap.wizard-d782aee0ec46f0cb09d3db478d9974cf.js
 jquery.gallery.js: jquery.gallery-8f202acb5844b47bf689214a3512fa80.js
 jquery/index.gallery.js: jquery.gallery-8f202acb5844b47bf689214a3512fa80.js
-modernizr.custom.53451.js: modernizr.custom.53451-5c4eeccf659da2baacac538b70b48cd2.js
-modernizr/index.custom.53451.js: modernizr.custom.53451-5c4eeccf659da2baacac538b70b48cd2.js
 zoomflow/zoomflow.dev.js: zoomflow/zoomflow.dev-66cf49dbcd7b4fb374ebe9a2a2a39fea.js
 zoomflow/zoomflow/index.dev.js: zoomflow/zoomflow.dev-66cf49dbcd7b4fb374ebe9a2a2a39fea.js
-zoomflow/zoomflow.css: zoomflow/zoomflow-c019b8b2485d4925dc8529f4b2ce6ff1.css
-zoomflow/zoomflow/index.css: zoomflow/zoomflow-c019b8b2485d4925dc8529f4b2ce6ff1.css
 application.css: application-3017063080d536c1a42d773b7de2e287.css
 application/index.css: application-3017063080d536c1a42d773b7de2e287.css
 bootstrap-responsive.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
@@ -88,5 +84,7 @@ prettify.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
 prettify/index.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
 style.css: style-16f616943dc4bdb67b4c24796ea12ef6.css
 style/index.css: style-16f616943dc4bdb67b4c24796ea12ef6.css
+zoomflow.css: zoomflow-74815dbce6c1135a83ee4f17cfc0e6ee.css
+zoomflow/index.css: zoomflow-74815dbce6c1135a83ee4f17cfc0e6ee.css
 jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
 jquery/index.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
