--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -51,14 +51,16 @@ timeIcon.png: timeIcon-030cbb9a35b95c008949e1e1af48b31f.png
 timeIcon/index.png: timeIcon-030cbb9a35b95c008949e1e1af48b31f.png
 topBarBG.png: topBarBG-78e160f5aac3985110e62277150ecf74.png
 topBarBG/index.png: topBarBG-78e160f5aac3985110e62277150ecf74.png
-application.js: application-dff58a63dba0ce33bb2aef8c4de67648.js
-application/index.js: application-dff58a63dba0ce33bb2aef8c4de67648.js
+application.js: application-1b814bd9c0c0f0c7963709a5e49340d6.js
+application/index.js: application-1b814bd9c0c0f0c7963709a5e49340d6.js
 bootstrap-datepicker.js: bootstrap-datepicker-74c36d29cb50e87871b6ae6db53cb833.js
 bootstrap-datepicker/index.js: bootstrap-datepicker-74c36d29cb50e87871b6ae6db53cb833.js
 bootstrap-timepicker.js: bootstrap-timepicker-0a8e7ed55fe8e0f216163c3b052455e4.js
 bootstrap-timepicker/index.js: bootstrap-timepicker-0a8e7ed55fe8e0f216163c3b052455e4.js
 bootstrap.js: bootstrap-455e3d4a9b7be1354e35a72ce01a6642.js
 bootstrap/index.js: bootstrap-455e3d4a9b7be1354e35a72ce01a6642.js
+closed-event-overlay.js: closed-event-overlay-7bc6ec9e1bec31f55ae67d165bb4bc17.js
+closed-event-overlay/index.js: closed-event-overlay-7bc6ec9e1bec31f55ae67d165bb4bc17.js
 index.html: index-dc4e7e08d4bfba4dbf19714fe6628101.html
 jquery-1.9.1.js: jquery-1.9.1-08bbde0e2625ba65b3f4d03e5cf1c05d.js
 jquery-1/index.9.1.js: jquery-1.9.1-08bbde0e2625ba65b3f4d03e5cf1c05d.js
@@ -68,8 +70,8 @@ jquery.gallery.js: jquery.gallery-8f202acb5844b47bf689214a3512fa80.js
 jquery/index.gallery.js: jquery.gallery-8f202acb5844b47bf689214a3512fa80.js
 zoomflow/zoomflow.dev.js: zoomflow/zoomflow.dev-66cf49dbcd7b4fb374ebe9a2a2a39fea.js
 zoomflow/zoomflow/index.dev.js: zoomflow/zoomflow.dev-66cf49dbcd7b4fb374ebe9a2a2a39fea.js
-application.css: application-aadc44f4d0112fb7acd708240b182e3e.css
-application/index.css: application-aadc44f4d0112fb7acd708240b182e3e.css
+application.css: application-50286267382cfb2741ec982cea233a48.css
+application/index.css: application-50286267382cfb2741ec982cea233a48.css
 bootstrap-responsive.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
 bootstrap-responsive/index.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
 bootstrap-timepicker.css: bootstrap-timepicker-507a15d551ef65cab721d901af6a8a7f.css
@@ -82,8 +84,8 @@ datepicker.css: datepicker-f030298a599c581d22476f8572d7386d.css
 datepicker/index.css: datepicker-f030298a599c581d22476f8572d7386d.css
 prettify.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
 prettify/index.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
-style.css: style-811be006d59349189329fcd0b8a6d919.css
-style/index.css: style-811be006d59349189329fcd0b8a6d919.css
+style.css: style-2bda694ebbe97d52827c734d1a1fff2c.css
+style/index.css: style-2bda694ebbe97d52827c734d1a1fff2c.css
 zoomflow.css: zoomflow-74815dbce6c1135a83ee4f17cfc0e6ee.css
 zoomflow/index.css: zoomflow-74815dbce6c1135a83ee4f17cfc0e6ee.css
 jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
