--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -21,6 +21,8 @@ glyphicons-halflings-white.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157
 glyphicons-halflings-white/index.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
 glyphicons-halflings.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
 glyphicons-halflings/index.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
+groupsBG.png: groupsBG-7389488e3dff557f47c0bab111c01a94.png
+groupsBG/index.png: groupsBG-7389488e3dff557f47c0bab111c01a94.png
 headerBG.png: headerBG-d4c95e03b452f2190b06dfa4a6f8da78.png
 headerBG/index.png: headerBG-d4c95e03b452f2190b06dfa4a6f8da78.png
 hugh-jackman-thumbnail.jpg: hugh-jackman-thumbnail-fd6cc7440950106b9a6c1013cc8b0c83.jpg
@@ -51,27 +53,27 @@ timeIcon.png: timeIcon-030cbb9a35b95c008949e1e1af48b31f.png
 timeIcon/index.png: timeIcon-030cbb9a35b95c008949e1e1af48b31f.png
 topBarBG.png: topBarBG-78e160f5aac3985110e62277150ecf74.png
 topBarBG/index.png: topBarBG-78e160f5aac3985110e62277150ecf74.png
-application.js: application-bfd5c778c95ae72f568d4f5a6e3bf0e5.js
-application/index.js: application-bfd5c778c95ae72f568d4f5a6e3bf0e5.js
-bootstrap-datepicker.js: bootstrap-datepicker-74c36d29cb50e87871b6ae6db53cb833.js
-bootstrap-datepicker/index.js: bootstrap-datepicker-74c36d29cb50e87871b6ae6db53cb833.js
-bootstrap-timepicker.js: bootstrap-timepicker-0a8e7ed55fe8e0f216163c3b052455e4.js
-bootstrap-timepicker/index.js: bootstrap-timepicker-0a8e7ed55fe8e0f216163c3b052455e4.js
-bootstrap.js: bootstrap-455e3d4a9b7be1354e35a72ce01a6642.js
-bootstrap/index.js: bootstrap-455e3d4a9b7be1354e35a72ce01a6642.js
-closed-event-overlay.js: closed-event-overlay-7bc6ec9e1bec31f55ae67d165bb4bc17.js
-closed-event-overlay/index.js: closed-event-overlay-7bc6ec9e1bec31f55ae67d165bb4bc17.js
+application.js: application-39c003e747478fc099e042f3fd045b5c.js
+application/index.js: application-39c003e747478fc099e042f3fd045b5c.js
+bootstrap-datepicker.js: bootstrap-datepicker-ea267d0f4b58e4c693968c4210e25490.js
+bootstrap-datepicker/index.js: bootstrap-datepicker-ea267d0f4b58e4c693968c4210e25490.js
+bootstrap-timepicker.js: bootstrap-timepicker-821328b7b6f5603a36ba112e7c3f8042.js
+bootstrap-timepicker/index.js: bootstrap-timepicker-821328b7b6f5603a36ba112e7c3f8042.js
+bootstrap.js: bootstrap-c548b36591d6d4b5e206961092e41eb8.js
+bootstrap/index.js: bootstrap-c548b36591d6d4b5e206961092e41eb8.js
+closed-event-overlay.js: closed-event-overlay-2704597afb0fa4de1aeaf8ab96d26e3f.js
+closed-event-overlay/index.js: closed-event-overlay-2704597afb0fa4de1aeaf8ab96d26e3f.js
 index.html: index-dc4e7e08d4bfba4dbf19714fe6628101.html
-jquery-1.9.1.js: jquery-1.9.1-08bbde0e2625ba65b3f4d03e5cf1c05d.js
-jquery-1/index.9.1.js: jquery-1.9.1-08bbde0e2625ba65b3f4d03e5cf1c05d.js
-jquery.bootstrap.wizard.js: jquery.bootstrap.wizard-d782aee0ec46f0cb09d3db478d9974cf.js
-jquery/index.bootstrap.wizard.js: jquery.bootstrap.wizard-d782aee0ec46f0cb09d3db478d9974cf.js
-jquery.gallery.js: jquery.gallery-8f202acb5844b47bf689214a3512fa80.js
-jquery/index.gallery.js: jquery.gallery-8f202acb5844b47bf689214a3512fa80.js
-zoomflow/zoomflow.dev.js: zoomflow/zoomflow.dev-66cf49dbcd7b4fb374ebe9a2a2a39fea.js
-zoomflow/zoomflow/index.dev.js: zoomflow/zoomflow.dev-66cf49dbcd7b4fb374ebe9a2a2a39fea.js
-application.css: application-fd6a3cf9dee8b311143568eefefc9586.css
-application/index.css: application-fd6a3cf9dee8b311143568eefefc9586.css
+jquery-1.9.1.js: jquery-1.9.1-186cad25611b3c790cb50517ee029d2a.js
+jquery-1/index.9.1.js: jquery-1.9.1-186cad25611b3c790cb50517ee029d2a.js
+jquery.bootstrap.wizard.js: jquery.bootstrap.wizard-fb0689402e3e80713289dd7962a864ab.js
+jquery/index.bootstrap.wizard.js: jquery.bootstrap.wizard-fb0689402e3e80713289dd7962a864ab.js
+jquery.gallery.js: jquery.gallery-2182d6d54cc1b5c5feb2ef78fbde7d0d.js
+jquery/index.gallery.js: jquery.gallery-2182d6d54cc1b5c5feb2ef78fbde7d0d.js
+zoomflow/zoomflow.dev.js: zoomflow/zoomflow.dev-23dcf2a97da4ae698d066a41dccee462.js
+zoomflow/zoomflow/index.dev.js: zoomflow/zoomflow.dev-23dcf2a97da4ae698d066a41dccee462.js
+application.css: application-d1a5e25077e4a6be775da86436ea1dcb.css
+application/index.css: application-d1a5e25077e4a6be775da86436ea1dcb.css
 bootstrap-responsive.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
 bootstrap-responsive/index.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
 bootstrap-timepicker.css: bootstrap-timepicker-507a15d551ef65cab721d901af6a8a7f.css
@@ -84,8 +86,8 @@ datepicker.css: datepicker-f030298a599c581d22476f8572d7386d.css
 datepicker/index.css: datepicker-f030298a599c581d22476f8572d7386d.css
 prettify.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
 prettify/index.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
-style.css: style-6bdc02fe4d45c8d5c8a182646bc24f72.css
-style/index.css: style-6bdc02fe4d45c8d5c8a182646bc24f72.css
+style.css: style-ce23465d5b81e761c452ef2d8dbda572.css
+style/index.css: style-ce23465d5b81e761c452ef2d8dbda572.css
 zoomflow.css: zoomflow-74815dbce6c1135a83ee4f17cfc0e6ee.css
 zoomflow/index.css: zoomflow-74815dbce6c1135a83ee4f17cfc0e6ee.css
 jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
