--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -9,6 +9,8 @@ contentBG.png: contentBG-e5b71b7528a353ed6568848d3dfb261b.png
 contentBG/index.png: contentBG-e5b71b7528a353ed6568848d3dfb261b.png
 eventDetailPageHeaderImage.png: eventDetailPageHeaderImage-c91f87ba3ec138a8582f7c7ea13c6cb0.png
 eventDetailPageHeaderImage/index.png: eventDetailPageHeaderImage-c91f87ba3ec138a8582f7c7ea13c6cb0.png
+eventIcon.png: eventIcon-adcaf8e05642d13f9a706facacc961a7.png
+eventIcon/index.png: eventIcon-adcaf8e05642d13f9a706facacc961a7.png
 eventImage.png: eventImage-b393aabfe2ffca60953921e8bb0e4b6b.png
 eventImage/index.png: eventImage-b393aabfe2ffca60953921e8bb0e4b6b.png
 foodPlate.jpg: foodPlate-4ebc26e17793caa36c57cf9975ee729b.jpg
@@ -41,20 +43,24 @@ img/arrow-right-black.png: img/arrow-right-black-8cf46a4aa9662bf041b90ce4bc08077
 img/arrow-right-black/index.png: img/arrow-right-black-8cf46a4aa9662bf041b90ce4bc080775.png
 img/preloader.gif: img/preloader-494b2f4661d8df7809cf7a491abc5a5e.gif
 img/preloader/index.gif: img/preloader-494b2f4661d8df7809cf7a491abc5a5e.gif
+joinEvent.png: joinEvent-24f63f0482901a83f5502397bf7f26ff.png
+joinEvent/index.png: joinEvent-24f63f0482901a83f5502397bf7f26ff.png
 locationIcon.png: locationIcon-4fbf527f6b20b0ee83a793f4607a8309.png
 locationIcon/index.png: locationIcon-4fbf527f6b20b0ee83a793f4607a8309.png
 logo.png: logo-06d1d41faae3f23eb0c7180506fee7fb.png
 logo/index.png: logo-06d1d41faae3f23eb0c7180506fee7fb.png
 noProfilePic.png: noProfilePic-d55d6f5f58c3c10b3ee56ce81c367105.png
 noProfilePic/index.png: noProfilePic-d55d6f5f58c3c10b3ee56ce81c367105.png
+shareEvent.png: shareEvent-aece2864ddad7768e2dbbecbdaf5addd.png
+shareEvent/index.png: shareEvent-aece2864ddad7768e2dbbecbdaf5addd.png
 sliderImage1.png: sliderImage1-5dad0202a6d16cc93ebbf62804b4e7c6.png
 sliderImage1/index.png: sliderImage1-5dad0202a6d16cc93ebbf62804b4e7c6.png
 timeIcon.png: timeIcon-030cbb9a35b95c008949e1e1af48b31f.png
 timeIcon/index.png: timeIcon-030cbb9a35b95c008949e1e1af48b31f.png
 topBarBG.png: topBarBG-78e160f5aac3985110e62277150ecf74.png
 topBarBG/index.png: topBarBG-78e160f5aac3985110e62277150ecf74.png
-application.js: application-edf0757b23e8b2a0b4c2f60cd3bfdfba.js
-application/index.js: application-edf0757b23e8b2a0b4c2f60cd3bfdfba.js
+application.js: application-e5785c419e38b8f613ea1f429581a916.js
+application/index.js: application-e5785c419e38b8f613ea1f429581a916.js
 bootstrap-datepicker.js: bootstrap-datepicker-ea267d0f4b58e4c693968c4210e25490.js
 bootstrap-datepicker/index.js: bootstrap-datepicker-ea267d0f4b58e4c693968c4210e25490.js
 bootstrap-timepicker.js: bootstrap-timepicker-821328b7b6f5603a36ba112e7c3f8042.js
@@ -72,8 +78,8 @@ jquery.gallery.js: jquery.gallery-2182d6d54cc1b5c5feb2ef78fbde7d0d.js
 jquery/index.gallery.js: jquery.gallery-2182d6d54cc1b5c5feb2ef78fbde7d0d.js
 zoomflow/zoomflow.dev.js: zoomflow/zoomflow.dev-23dcf2a97da4ae698d066a41dccee462.js
 zoomflow/zoomflow/index.dev.js: zoomflow/zoomflow.dev-23dcf2a97da4ae698d066a41dccee462.js
-application.css: application-293fdbd8b6c37d3c97b1d091fed18b4e.css
-application/index.css: application-293fdbd8b6c37d3c97b1d091fed18b4e.css
+application.css: application-f0fc18dc81e29b00e9e3a959ba97be6c.css
+application/index.css: application-f0fc18dc81e29b00e9e3a959ba97be6c.css
 bootstrap-responsive.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
 bootstrap-responsive/index.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
 bootstrap-timepicker.css: bootstrap-timepicker-507a15d551ef65cab721d901af6a8a7f.css
@@ -86,8 +92,8 @@ datepicker.css: datepicker-f030298a599c581d22476f8572d7386d.css
 datepicker/index.css: datepicker-f030298a599c581d22476f8572d7386d.css
 prettify.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
 prettify/index.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
-style.css: style-b5e9e65e813ce7224ed7d3e5debc10c6.css
-style/index.css: style-b5e9e65e813ce7224ed7d3e5debc10c6.css
+style.css: style-f46a16cbc5af2fc8617c0dcb64210057.css
+style/index.css: style-f46a16cbc5af2fc8617c0dcb64210057.css
 zoomflow.css: zoomflow-74815dbce6c1135a83ee4f17cfc0e6ee.css
 zoomflow/index.css: zoomflow-74815dbce6c1135a83ee4f17cfc0e6ee.css
 jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
