--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -53,14 +53,16 @@ noProfilePic.png: noProfilePic-d55d6f5f58c3c10b3ee56ce81c367105.png
 noProfilePic/index.png: noProfilePic-d55d6f5f58c3c10b3ee56ce81c367105.png
 shareEvent.png: shareEvent-aece2864ddad7768e2dbbecbdaf5addd.png
 shareEvent/index.png: shareEvent-aece2864ddad7768e2dbbecbdaf5addd.png
+signup_image.png: signup_image-be4128c2b97a923febd2f0222ec0aa34.png
+signup_image/index.png: signup_image-be4128c2b97a923febd2f0222ec0aa34.png
 sliderImage1.png: sliderImage1-5dad0202a6d16cc93ebbf62804b4e7c6.png
 sliderImage1/index.png: sliderImage1-5dad0202a6d16cc93ebbf62804b4e7c6.png
 timeIcon.png: timeIcon-030cbb9a35b95c008949e1e1af48b31f.png
 timeIcon/index.png: timeIcon-030cbb9a35b95c008949e1e1af48b31f.png
 topBarBG.png: topBarBG-78e160f5aac3985110e62277150ecf74.png
 topBarBG/index.png: topBarBG-78e160f5aac3985110e62277150ecf74.png
-application.js: application-e5785c419e38b8f613ea1f429581a916.js
-application/index.js: application-e5785c419e38b8f613ea1f429581a916.js
+application.js: application-d13468f717466b28267ebe78791759ee.js
+application/index.js: application-d13468f717466b28267ebe78791759ee.js
 bootstrap-datepicker.js: bootstrap-datepicker-ea267d0f4b58e4c693968c4210e25490.js
 bootstrap-datepicker/index.js: bootstrap-datepicker-ea267d0f4b58e4c693968c4210e25490.js
 bootstrap-timepicker.js: bootstrap-timepicker-821328b7b6f5603a36ba112e7c3f8042.js
@@ -78,8 +80,8 @@ jquery.gallery.js: jquery.gallery-2182d6d54cc1b5c5feb2ef78fbde7d0d.js
 jquery/index.gallery.js: jquery.gallery-2182d6d54cc1b5c5feb2ef78fbde7d0d.js
 zoomflow/zoomflow.dev.js: zoomflow/zoomflow.dev-23dcf2a97da4ae698d066a41dccee462.js
 zoomflow/zoomflow/index.dev.js: zoomflow/zoomflow.dev-23dcf2a97da4ae698d066a41dccee462.js
-application.css: application-f0fc18dc81e29b00e9e3a959ba97be6c.css
-application/index.css: application-f0fc18dc81e29b00e9e3a959ba97be6c.css
+application.css: application-48e989a3f1c61ed7f359464ad8b2b3ef.css
+application/index.css: application-48e989a3f1c61ed7f359464ad8b2b3ef.css
 bootstrap-responsive.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
 bootstrap-responsive/index.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
 bootstrap-timepicker.css: bootstrap-timepicker-507a15d551ef65cab721d901af6a8a7f.css
@@ -92,8 +94,8 @@ datepicker.css: datepicker-f030298a599c581d22476f8572d7386d.css
 datepicker/index.css: datepicker-f030298a599c581d22476f8572d7386d.css
 prettify.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
 prettify/index.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
-style.css: style-f46a16cbc5af2fc8617c0dcb64210057.css
-style/index.css: style-f46a16cbc5af2fc8617c0dcb64210057.css
+style.css: style-e35b32066d840b79e3971018b2780227.css
+style/index.css: style-e35b32066d840b79e3971018b2780227.css
 zoomflow.css: zoomflow-74815dbce6c1135a83ee4f17cfc0e6ee.css
 zoomflow/index.css: zoomflow-74815dbce6c1135a83ee4f17cfc0e6ee.css
 jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
