--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -45,6 +45,8 @@ img/preloader.gif: img/preloader-494b2f4661d8df7809cf7a491abc5a5e.gif
 img/preloader/index.gif: img/preloader-494b2f4661d8df7809cf7a491abc5a5e.gif
 joinEvent.png: joinEvent-24f63f0482901a83f5502397bf7f26ff.png
 joinEvent/index.png: joinEvent-24f63f0482901a83f5502397bf7f26ff.png
+loader.gif: loader-f334e3d7ffee71748d69150ba81ddf81.gif
+loader/index.gif: loader-f334e3d7ffee71748d69150ba81ddf81.gif
 locationIcon.png: locationIcon-4fbf527f6b20b0ee83a793f4607a8309.png
 locationIcon/index.png: locationIcon-4fbf527f6b20b0ee83a793f4607a8309.png
 logo.png: logo-06d1d41faae3f23eb0c7180506fee7fb.png
@@ -61,12 +63,14 @@ timeIcon.png: timeIcon-030cbb9a35b95c008949e1e1af48b31f.png
 timeIcon/index.png: timeIcon-030cbb9a35b95c008949e1e1af48b31f.png
 topBarBG.png: topBarBG-78e160f5aac3985110e62277150ecf74.png
 topBarBG/index.png: topBarBG-78e160f5aac3985110e62277150ecf74.png
+waterfall.jpg: waterfall-509fd8265fd4c6e23f3d2c5cc9745bd3.jpg
+waterfall/index.jpg: waterfall-509fd8265fd4c6e23f3d2c5cc9745bd3.jpg
 admin/application.js: admin/application-1b13569e9620782f423d4cd3ce931750.js
 admin/application/index.js: admin/application-1b13569e9620782f423d4cd3ce931750.js
 admin/highcharts.js: admin/highcharts-8b90df74ca79c5e04628c3f5e8cfeaf2.js
 admin/highcharts/index.js: admin/highcharts-8b90df74ca79c5e04628c3f5e8cfeaf2.js
-application.js: application-ce791bf976dd508d38a93f67c4512202.js
-application/index.js: application-ce791bf976dd508d38a93f67c4512202.js
+application.js: application-0cd77913af1ce53b1f55cb26658aea4a.js
+application/index.js: application-0cd77913af1ce53b1f55cb26658aea4a.js
 bootstrap-datepicker.js: bootstrap-datepicker-ea267d0f4b58e4c693968c4210e25490.js
 bootstrap-datepicker/index.js: bootstrap-datepicker-ea267d0f4b58e4c693968c4210e25490.js
 bootstrap-timepicker.js: bootstrap-timepicker-821328b7b6f5603a36ba112e7c3f8042.js
@@ -88,12 +92,12 @@ restaurant_picker.js: restaurant_picker-cc0b03132dcc9bd3f1a289dea5964a09.js
 restaurant_picker/index.js: restaurant_picker-cc0b03132dcc9bd3f1a289dea5964a09.js
 zoomflow/zoomflow.dev.js: zoomflow/zoomflow.dev-23dcf2a97da4ae698d066a41dccee462.js
 zoomflow/zoomflow/index.dev.js: zoomflow/zoomflow.dev-23dcf2a97da4ae698d066a41dccee462.js
-admin/admin.css: admin/admin-bfb4ec033b1059df4bb49f657c476bd8.css
-admin/admin/index.css: admin/admin-bfb4ec033b1059df4bb49f657c476bd8.css
-admin/application.css: admin/application-bfb4ec033b1059df4bb49f657c476bd8.css
-admin/application/index.css: admin/application-bfb4ec033b1059df4bb49f657c476bd8.css
-application.css: application-7f5f2cf7a631dc2b840c897a5c48e19a.css
-application/index.css: application-7f5f2cf7a631dc2b840c897a5c48e19a.css
+admin/admin.css: admin/admin-54bc728c42f76122b717ba6858efe859.css
+admin/admin/index.css: admin/admin-54bc728c42f76122b717ba6858efe859.css
+admin/application.css: admin/application-54bc728c42f76122b717ba6858efe859.css
+admin/application/index.css: admin/application-54bc728c42f76122b717ba6858efe859.css
+application.css: application-653e427420b34cfedbaf90aafb342ffb.css
+application/index.css: application-653e427420b34cfedbaf90aafb342ffb.css
 bootstrap-responsive.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
 bootstrap-responsive/index.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
 bootstrap-timepicker.css: bootstrap-timepicker-507a15d551ef65cab721d901af6a8a7f.css
@@ -106,8 +110,8 @@ datepicker.css: datepicker-f030298a599c581d22476f8572d7386d.css
 datepicker/index.css: datepicker-f030298a599c581d22476f8572d7386d.css
 prettify.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
 prettify/index.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
-style.css: style-d7760098231f1ab2ddceadaf12c93506.css
-style/index.css: style-d7760098231f1ab2ddceadaf12c93506.css
+style.css: style-24eef59ac4a1a6741cfbd509d69713e8.css
+style/index.css: style-24eef59ac4a1a6741cfbd509d69713e8.css
 zoomflow.css: zoomflow-74815dbce6c1135a83ee4f17cfc0e6ee.css
 zoomflow/index.css: zoomflow-74815dbce6c1135a83ee4f17cfc0e6ee.css
 jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
