--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -5,6 +5,8 @@ Jennifer-Lawrence-Thumbnail.jpg: Jennifer-Lawrence-Thumbnail-80da1dce821b1f4c5ea
 Jennifer-Lawrence-Thumbnail/index.jpg: Jennifer-Lawrence-Thumbnail-80da1dce821b1f4c5ea08b6f83a215af.jpg
 Jennifer-Lawrence.jpg: Jennifer-Lawrence-96ec5049feae13cfd0bea477a396b512.jpg
 Jennifer-Lawrence/index.jpg: Jennifer-Lawrence-96ec5049feae13cfd0bea477a396b512.jpg
+alert-overlay.png: alert-overlay-1761c70e8456d8ddae4e0caca3a58c21.png
+alert-overlay/index.png: alert-overlay-1761c70e8456d8ddae4e0caca3a58c21.png
 contentBG.png: contentBG-e5b71b7528a353ed6568848d3dfb261b.png
 contentBG/index.png: contentBG-e5b71b7528a353ed6568848d3dfb261b.png
 eventDetailPageHeaderImage.png: eventDetailPageHeaderImage-c91f87ba3ec138a8582f7c7ea13c6cb0.png
@@ -69,8 +71,8 @@ admin/application.js: admin/application-1b13569e9620782f423d4cd3ce931750.js
 admin/application/index.js: admin/application-1b13569e9620782f423d4cd3ce931750.js
 admin/highcharts.js: admin/highcharts-8b90df74ca79c5e04628c3f5e8cfeaf2.js
 admin/highcharts/index.js: admin/highcharts-8b90df74ca79c5e04628c3f5e8cfeaf2.js
-application.js: application-0cd77913af1ce53b1f55cb26658aea4a.js
-application/index.js: application-0cd77913af1ce53b1f55cb26658aea4a.js
+application.js: application-7bcef3c27ba43a05d45b7886a0078c16.js
+application/index.js: application-7bcef3c27ba43a05d45b7886a0078c16.js
 bootstrap-datepicker.js: bootstrap-datepicker-ea267d0f4b58e4c693968c4210e25490.js
 bootstrap-datepicker/index.js: bootstrap-datepicker-ea267d0f4b58e4c693968c4210e25490.js
 bootstrap-timepicker.js: bootstrap-timepicker-821328b7b6f5603a36ba112e7c3f8042.js
@@ -92,10 +94,10 @@ restaurant_picker.js: restaurant_picker-cc0b03132dcc9bd3f1a289dea5964a09.js
 restaurant_picker/index.js: restaurant_picker-cc0b03132dcc9bd3f1a289dea5964a09.js
 zoomflow/zoomflow.dev.js: zoomflow/zoomflow.dev-23dcf2a97da4ae698d066a41dccee462.js
 zoomflow/zoomflow/index.dev.js: zoomflow/zoomflow.dev-23dcf2a97da4ae698d066a41dccee462.js
-admin/admin.css: admin/admin-63daebbfd782d3affcf4fbc2dc7ccc50.css
-admin/admin/index.css: admin/admin-63daebbfd782d3affcf4fbc2dc7ccc50.css
-admin/application.css: admin/application-63daebbfd782d3affcf4fbc2dc7ccc50.css
-admin/application/index.css: admin/application-63daebbfd782d3affcf4fbc2dc7ccc50.css
+admin/admin.css: admin/admin-48dc30962f78722373e7aeaa8be1b828.css
+admin/admin/index.css: admin/admin-48dc30962f78722373e7aeaa8be1b828.css
+admin/application.css: admin/application-48dc30962f78722373e7aeaa8be1b828.css
+admin/application/index.css: admin/application-48dc30962f78722373e7aeaa8be1b828.css
 application.css: application-16d0956f6642c7ed970ec30165e5962b.css
 application/index.css: application-16d0956f6642c7ed970ec30165e5962b.css
 bootstrap-responsive.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
