--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -53,6 +53,8 @@ locationIcon.png: locationIcon-4fbf527f6b20b0ee83a793f4607a8309.png
 locationIcon/index.png: locationIcon-4fbf527f6b20b0ee83a793f4607a8309.png
 logo.png: logo-06d1d41faae3f23eb0c7180506fee7fb.png
 logo/index.png: logo-06d1d41faae3f23eb0c7180506fee7fb.png
+logo_shrunk.png: logo_shrunk-36cd05e7145eeeb765ed9c861e483479.png
+logo_shrunk/index.png: logo_shrunk-36cd05e7145eeeb765ed9c861e483479.png
 noProfilePic.png: noProfilePic-d55d6f5f58c3c10b3ee56ce81c367105.png
 noProfilePic/index.png: noProfilePic-d55d6f5f58c3c10b3ee56ce81c367105.png
 shareEvent.png: shareEvent-aece2864ddad7768e2dbbecbdaf5addd.png
@@ -95,8 +97,8 @@ admin/admin.css: admin/admin-8dcd8bf8010362175e649c2cb5ea2726.css
 admin/admin/index.css: admin/admin-8dcd8bf8010362175e649c2cb5ea2726.css
 admin/application.css: admin/application-8dcd8bf8010362175e649c2cb5ea2726.css
 admin/application/index.css: admin/application-8dcd8bf8010362175e649c2cb5ea2726.css
-application.css: application-054eebb9db81f3f612f948925f540c36.css
-application/index.css: application-054eebb9db81f3f612f948925f540c36.css
+application.css: application-266f5557d192ecd8bb960db940ea78b3.css
+application/index.css: application-266f5557d192ecd8bb960db940ea78b3.css
 bootstrap-responsive.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
 bootstrap-responsive/index.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
 bootstrap-timepicker.css: bootstrap-timepicker-507a15d551ef65cab721d901af6a8a7f.css
@@ -109,8 +111,8 @@ datepicker.css: datepicker-f030298a599c581d22476f8572d7386d.css
 datepicker/index.css: datepicker-f030298a599c581d22476f8572d7386d.css
 prettify.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
 prettify/index.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
-style.css: style-6b3c6fc8665e9718275b58f31f727fae.css
-style/index.css: style-6b3c6fc8665e9718275b58f31f727fae.css
+style.css: style-69c26144e30866e3e45183178dc1caa6.css
+style/index.css: style-69c26144e30866e3e45183178dc1caa6.css
 zoomflow.css: zoomflow-74815dbce6c1135a83ee4f17cfc0e6ee.css
 zoomflow/index.css: zoomflow-74815dbce6c1135a83ee4f17cfc0e6ee.css
 jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
