--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -17,6 +17,8 @@ Jennifer-Lawrence.jpg: Jennifer-Lawrence-96ec5049feae13cfd0bea477a396b512.jpg
 Jennifer-Lawrence/index.jpg: Jennifer-Lawrence-96ec5049feae13cfd0bea477a396b512.jpg
 alert-overlay.png: alert-overlay-1761c70e8456d8ddae4e0caca3a58c21.png
 alert-overlay/index.png: alert-overlay-1761c70e8456d8ddae4e0caca3a58c21.png
+community-dining.png: community-dining-d16cdfbbf0a143259195a670905f8ff1.png
+community-dining/index.png: community-dining-d16cdfbbf0a143259195a670905f8ff1.png
 contentBG.png: contentBG-e5b71b7528a353ed6568848d3dfb261b.png
 contentBG/index.png: contentBG-e5b71b7528a353ed6568848d3dfb261b.png
 eventDetailPageHeaderImage.png: eventDetailPageHeaderImage-c91f87ba3ec138a8582f7c7ea13c6cb0.png
@@ -85,8 +87,8 @@ admin/application.js: admin/application-1b13569e9620782f423d4cd3ce931750.js
 admin/application/index.js: admin/application-1b13569e9620782f423d4cd3ce931750.js
 admin/highcharts.js: admin/highcharts-8b90df74ca79c5e04628c3f5e8cfeaf2.js
 admin/highcharts/index.js: admin/highcharts-8b90df74ca79c5e04628c3f5e8cfeaf2.js
-application.js: application-750c0028d42ce9aaa76173e6f40e942a.js
-application/index.js: application-750c0028d42ce9aaa76173e6f40e942a.js
+application.js: application-2b980b2fb784a0560df1094659c259d2.js
+application/index.js: application-2b980b2fb784a0560df1094659c259d2.js
 bootstrap-datepicker.js: bootstrap-datepicker-ea267d0f4b58e4c693968c4210e25490.js
 bootstrap-datepicker/index.js: bootstrap-datepicker-ea267d0f4b58e4c693968c4210e25490.js
 bootstrap-multiselect.js: bootstrap-multiselect-1343b2f9849c0ea8afd0c2ef933c132e.js
@@ -97,18 +99,25 @@ bootstrap.js: bootstrap-c548b36591d6d4b5e206961092e41eb8.js
 bootstrap/index.js: bootstrap-c548b36591d6d4b5e206961092e41eb8.js
 closed-event-overlay.js: closed-event-overlay-2704597afb0fa4de1aeaf8ab96d26e3f.js
 closed-event-overlay/index.js: closed-event-overlay-2704597afb0fa4de1aeaf8ab96d26e3f.js
+cycle.js: cycle-61ca7a15f44c5f606dfad5ac283a0a53.js
+cycle/index.js: cycle-61ca7a15f44c5f606dfad5ac283a0a53.js
 events.js: events-cff7de0dcc014ec7641f9fe5c1ce3a88.js
 events/index.js: events-cff7de0dcc014ec7641f9fe5c1ce3a88.js
+index.html: index-dc4e7e08d4bfba4dbf19714fe6628101.html
 jquery-1.9.1.js: jquery-1.9.1-186cad25611b3c790cb50517ee029d2a.js
 jquery-1/index.9.1.js: jquery-1.9.1-186cad25611b3c790cb50517ee029d2a.js
 jquery.bootstrap.wizard.js: jquery.bootstrap.wizard-fb0689402e3e80713289dd7962a864ab.js
 jquery/index.bootstrap.wizard.js: jquery.bootstrap.wizard-fb0689402e3e80713289dd7962a864ab.js
+jquery.gallery.js: jquery.gallery-2182d6d54cc1b5c5feb2ef78fbde7d0d.js
+jquery/index.gallery.js: jquery.gallery-2182d6d54cc1b5c5feb2ef78fbde7d0d.js
 restaurant_picker.js: restaurant_picker-cc0b03132dcc9bd3f1a289dea5964a09.js
 restaurant_picker/index.js: restaurant_picker-cc0b03132dcc9bd3f1a289dea5964a09.js
+zoomflow/zoomflow.dev.js: zoomflow/zoomflow.dev-23dcf2a97da4ae698d066a41dccee462.js
+zoomflow/zoomflow/index.dev.js: zoomflow/zoomflow.dev-23dcf2a97da4ae698d066a41dccee462.js
 admin/admin.css: admin/admin-8dcd8bf8010362175e649c2cb5ea2726.css
 admin/admin/index.css: admin/admin-8dcd8bf8010362175e649c2cb5ea2726.css
-admin/application.css: admin/application-8dcd8bf8010362175e649c2cb5ea2726.css
-admin/application/index.css: admin/application-8dcd8bf8010362175e649c2cb5ea2726.css
+admin/application.css: admin/application-a2fb5098b7dbb6232e917179a16748cb.css
+admin/application/index.css: admin/application-a2fb5098b7dbb6232e917179a16748cb.css
 application.css: application-170f069a56d3c2c0efbc3da2af95ef85.css
 application/index.css: application-170f069a56d3c2c0efbc3da2af95ef85.css
 bootstrap-responsive.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
