--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -9,30 +9,20 @@ fontawesome-webfont.ttf: fontawesome-webfont-fb7a72c810ec644f3c26dcca68638308.tt
 fontawesome-webfont/index.ttf: fontawesome-webfont-fb7a72c810ec644f3c26dcca68638308.ttf
 fontawesome-webfont.woff: fontawesome-webfont-b4d67f1e5651506c3e80d842ee67d6ba.woff
 fontawesome-webfont/index.woff: fontawesome-webfont-b4d67f1e5651506c3e80d842ee67d6ba.woff
-5349283549_40f938f381_o.jpg: 5349283549_40f938f381_o-f531a9afce147e32644f585cbdcad860.jpg
-5349283549_40f938f381_o/index.jpg: 5349283549_40f938f381_o-f531a9afce147e32644f585cbdcad860.jpg
-Jennifer-Lawrence-Thumbnail.jpg: Jennifer-Lawrence-Thumbnail-80da1dce821b1f4c5ea08b6f83a215af.jpg
-Jennifer-Lawrence-Thumbnail/index.jpg: Jennifer-Lawrence-Thumbnail-80da1dce821b1f4c5ea08b6f83a215af.jpg
-Jennifer-Lawrence.jpg: Jennifer-Lawrence-96ec5049feae13cfd0bea477a396b512.jpg
-Jennifer-Lawrence/index.jpg: Jennifer-Lawrence-96ec5049feae13cfd0bea477a396b512.jpg
 alert-overlay.png: alert-overlay-1761c70e8456d8ddae4e0caca3a58c21.png
 alert-overlay/index.png: alert-overlay-1761c70e8456d8ddae4e0caca3a58c21.png
+background.png: background-fda7cbe4b71ca00010aa6277a08ae735.png
+background/index.png: background-fda7cbe4b71ca00010aa6277a08ae735.png
 community-dining.png: community-dining-d16cdfbbf0a143259195a670905f8ff1.png
 community-dining/index.png: community-dining-d16cdfbbf0a143259195a670905f8ff1.png
 contentBG.png: contentBG-e5b71b7528a353ed6568848d3dfb261b.png
 contentBG/index.png: contentBG-e5b71b7528a353ed6568848d3dfb261b.png
-eventDetailPageHeaderImage.png: eventDetailPageHeaderImage-c91f87ba3ec138a8582f7c7ea13c6cb0.png
-eventDetailPageHeaderImage/index.png: eventDetailPageHeaderImage-c91f87ba3ec138a8582f7c7ea13c6cb0.png
 eventIcon.png: eventIcon-adcaf8e05642d13f9a706facacc961a7.png
 eventIcon/index.png: eventIcon-adcaf8e05642d13f9a706facacc961a7.png
 eventImage.png: eventImage-b393aabfe2ffca60953921e8bb0e4b6b.png
 eventImage/index.png: eventImage-b393aabfe2ffca60953921e8bb0e4b6b.png
-foodPlate.jpg: foodPlate-4ebc26e17793caa36c57cf9975ee729b.jpg
-foodPlate/index.jpg: foodPlate-4ebc26e17793caa36c57cf9975ee729b.jpg
-foodPlateModified.jpg: foodPlateModified-00d930cb055bf887faaec7c187006eee.jpg
-foodPlateModified/index.jpg: foodPlateModified-00d930cb055bf887faaec7c187006eee.jpg
-foodPlateModified.png: foodPlateModified-738596d78892bdffbe48b4a262efc957.png
-foodPlateModified/index.png: foodPlateModified-738596d78892bdffbe48b4a262efc957.png
+facebookLogo.png: facebookLogo-8e2ecc9aca22ad9a28bab445d6cb28a6.png
+facebookLogo/index.png: facebookLogo-8e2ecc9aca22ad9a28bab445d6cb28a6.png
 glyphicons-halflings-white.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
 glyphicons-halflings-white/index.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
 glyphicons-halflings.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
@@ -41,10 +31,6 @@ groupsBG.png: groupsBG-7389488e3dff557f47c0bab111c01a94.png
 groupsBG/index.png: groupsBG-7389488e3dff557f47c0bab111c01a94.png
 headerBG.png: headerBG-d4c95e03b452f2190b06dfa4a6f8da78.png
 headerBG/index.png: headerBG-d4c95e03b452f2190b06dfa4a6f8da78.png
-hugh-jackman-thumbnail.jpg: hugh-jackman-thumbnail-fd6cc7440950106b9a6c1013cc8b0c83.jpg
-hugh-jackman-thumbnail/index.jpg: hugh-jackman-thumbnail-fd6cc7440950106b9a6c1013cc8b0c83.jpg
-hugh-jackman.jpg: hugh-jackman-8594a9f4522d5497c266f0eac4390a36.jpg
-hugh-jackman/index.jpg: hugh-jackman-8594a9f4522d5497c266f0eac4390a36.jpg
 img/1.jpg: img/1-b1e273e6a24a445d7293cf79aac3451e.jpg
 img/1/index.jpg: img/1-b1e273e6a24a445d7293cf79aac3451e.jpg
 img/2.jpg: img/2-80672192a08b2b303d18cc18d740647a.jpg
@@ -63,8 +49,8 @@ loader.gif: loader-f334e3d7ffee71748d69150ba81ddf81.gif
 loader/index.gif: loader-f334e3d7ffee71748d69150ba81ddf81.gif
 locationIcon.png: locationIcon-4fbf527f6b20b0ee83a793f4607a8309.png
 locationIcon/index.png: locationIcon-4fbf527f6b20b0ee83a793f4607a8309.png
-logo.png: logo-06d1d41faae3f23eb0c7180506fee7fb.png
-logo/index.png: logo-06d1d41faae3f23eb0c7180506fee7fb.png
+logo.png: logo-e3b941e5fb1677289e0d7cd6aa869c21.png
+logo/index.png: logo-e3b941e5fb1677289e0d7cd6aa869c21.png
 logo_shrunk.png: logo_shrunk-36cd05e7145eeeb765ed9c861e483479.png
 logo_shrunk/index.png: logo_shrunk-36cd05e7145eeeb765ed9c861e483479.png
 noProfilePic.png: noProfilePic-d55d6f5f58c3c10b3ee56ce81c367105.png
@@ -75,8 +61,6 @@ shareEvent.png: shareEvent-aece2864ddad7768e2dbbecbdaf5addd.png
 shareEvent/index.png: shareEvent-aece2864ddad7768e2dbbecbdaf5addd.png
 signup_image.png: signup_image-be4128c2b97a923febd2f0222ec0aa34.png
 signup_image/index.png: signup_image-be4128c2b97a923febd2f0222ec0aa34.png
-sliderImage1.png: sliderImage1-5dad0202a6d16cc93ebbf62804b4e7c6.png
-sliderImage1/index.png: sliderImage1-5dad0202a6d16cc93ebbf62804b4e7c6.png
 timeIcon.png: timeIcon-030cbb9a35b95c008949e1e1af48b31f.png
 timeIcon/index.png: timeIcon-030cbb9a35b95c008949e1e1af48b31f.png
 topBarBG.png: topBarBG-78e160f5aac3985110e62277150ecf74.png
@@ -87,8 +71,8 @@ admin/application.js: admin/application-1b13569e9620782f423d4cd3ce931750.js
 admin/application/index.js: admin/application-1b13569e9620782f423d4cd3ce931750.js
 admin/highcharts.js: admin/highcharts-8b90df74ca79c5e04628c3f5e8cfeaf2.js
 admin/highcharts/index.js: admin/highcharts-8b90df74ca79c5e04628c3f5e8cfeaf2.js
-application.js: application-c4124f95898cd40016a7a63869049ce6.js
-application/index.js: application-c4124f95898cd40016a7a63869049ce6.js
+application.js: application-18f4f125bfb75512f42e48d3d479b185.js
+application/index.js: application-18f4f125bfb75512f42e48d3d479b185.js
 bootstrap-datepicker.js: bootstrap-datepicker-ea267d0f4b58e4c693968c4210e25490.js
 bootstrap-datepicker/index.js: bootstrap-datepicker-ea267d0f4b58e4c693968c4210e25490.js
 bootstrap-multiselect.js: bootstrap-multiselect-1343b2f9849c0ea8afd0c2ef933c132e.js
@@ -118,8 +102,8 @@ admin/admin.css: admin/admin-8dcd8bf8010362175e649c2cb5ea2726.css
 admin/admin/index.css: admin/admin-8dcd8bf8010362175e649c2cb5ea2726.css
 admin/application.css: admin/application-a2fb5098b7dbb6232e917179a16748cb.css
 admin/application/index.css: admin/application-a2fb5098b7dbb6232e917179a16748cb.css
-application.css: application-4604c0c98d45ea24ff9392721a620ba4.css
-application/index.css: application-4604c0c98d45ea24ff9392721a620ba4.css
+application.css: application-6667b26260eff7f21eacdb3890dd4b45.css
+application/index.css: application-6667b26260eff7f21eacdb3890dd4b45.css
 bootstrap-responsive.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
 bootstrap-responsive/index.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
 bootstrap-timepicker.css: bootstrap-timepicker-507a15d551ef65cab721d901af6a8a7f.css
@@ -136,8 +120,8 @@ font-awesome.css: font-awesome-d87a3f144efd5e95717ce1c73b236e05.css
 font-awesome/index.css: font-awesome-d87a3f144efd5e95717ce1c73b236e05.css
 prettify.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
 prettify/index.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
-style.css: style-24d701e32aa52a7f206e381d5c8f65a6.css
-style/index.css: style-24d701e32aa52a7f206e381d5c8f65a6.css
+style.css: style-70505a8e2699b32430172960bf40f16e.css
+style/index.css: style-70505a8e2699b32430172960bf40f16e.css
 zoomflow.css: zoomflow-74815dbce6c1135a83ee4f17cfc0e6ee.css
 zoomflow/index.css: zoomflow-74815dbce6c1135a83ee4f17cfc0e6ee.css
 jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
